--- a/hello.ipynb
+++ b/hello.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "69263e9f",
+   "metadata": {},
+   "source": [
+    "## Jupyter Hello World"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "c124d9ee-a51a-408d-bce2-5b0773076d3c",
